# weather

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  animated_svg_widget.cpp  animated_svg_widget.hpp  forecast_widget.cpp  forecast_widget.hpp  forecast_widget.ui  geo_location_provider.cpp  geo_location_provider.hpp  location_widget.cpp  location_widget.hpp  location_widget.ui  main.cpp  main_window.cpp  main_window.hpp  main_window.ui  weather.qrc  weather_provider.cpp  weather_provider.hpp  weather_types.hpp
